# scraperV1

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  ENHANCEMENTS.md  LICENSE  README.md  ROBUSTNESS.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README.md  env.py
config/examples/: example-hackernews.yaml  example-quotes.yaml
docs/: API_GUIDE.md  ARCHITECTURE.md  DEV_GUIDE.md  HOW_TO_ADD_NEW_SITES.md  USER_GUIDE.md
grandma_scraper/: __init__.py
grandma_scraper/api/: __init__.py  main.py
grandma_scraper/api/middleware/: compression.py  metrics.py  rate_limit.py  request_id.py
grandma_scraper/api/routers/: auth.py  health.py  jobs.py  results.py  users.py  websocket.py
grandma_scraper/api/schemas/: __init__.py  jobs.py  results.py
grandma_scraper/auth/: __init__.py  config.py  schemas.py  security.py
grandma_scraper/cli/: __init__.py  main.py
grandma_scraper/core/: __init__.py  engine.py  exporters.py  extractors.py  fetchers.py  models.py
grandma_scraper/db/: __init__.py  base.py  config.py  models.py  session.py
grandma_scraper/tasks/: __init__.py  celery_app.py  scrape.py
grandma_scraper/utils/: __init__.py  logger.py  logging_config.py  retry.py  robots.py  url_validator.py
grandma_scraper/websockets/: manager.py
tests/: __init__.py
tests/api/: test_api.py
tests/core/: test_exporters.py  test_extractors.py  test_models.py
tests/fixtures/: sample.html
ui/grandma-scraper-ui/: index.html  package.json
ui/grandma-scraper-ui/src/: App.tsx  index.css
ui/grandma-scraper-ui/src/components/: CronBuilder.tsx  Layout.tsx  ProtectedRoute.tsx  VisualSelectorPicker.tsx
ui/grandma-scraper-ui/src/hooks/: useWebSocket.ts
ui/grandma-scraper-ui/src/pages/: Dashboard.tsx  JobDetails.tsx  JobWizard.tsx  Login.tsx  Register.tsx  Templates.tsx
ui/grandma-scraper-ui/src/services/: api.ts
ui/grandma-scraper-ui/src/stores/: authStore.ts
ui/grandma-scraper-ui/src/types/: index.ts
