[project]
name = "grandma-scraper"
version = "0.2.0"
description = "A grandma-friendly, production-grade web scraping tool with API backend"
authors = [
    {name = "GrandmaScrape Team"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core scraping
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "cssselect>=1.2.0",

    # Data & validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",

    # API & web
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",

    # Task queue
    "celery>=5.3.0",
    "redis>=5.0.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # CLI & output
    "typer>=0.9.0",
    "rich>=13.7.0",

    # Environment
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-pyyaml>=6.0.0",
    "types-beautifulsoup4>=4.12.0",
    "httpx>=0.25.0",
    "faker>=20.0.0",
]

[project.scripts]
grandma-scraper = "grandma_scraper.cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["grandma_scraper*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
